data/derived/comb/progs/unify/prog8705.ml.out
Characters 14-28:
  let _ = pipe [(fun x -> x+x); (fun x -> x + 3)] 3;;
                ^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
int
